fixes footer wrapping on desktop

--- a/static/css/desktop.less
+++ b/static/css/desktop.less
@@ -220,8 +220,8 @@
 }
 
 #footer { margin: 15px 0 0 0;
-    .copyright { width: 30%; }
-    .partners { width: 60% }
+    .copyright { width: 32%; }
+    .partners { width: 58%; margin-left: 25px; }
 }
 
 .back-top { display: none; }
